--- a/style.css
+++ b/style.css
@@ -69,6 +69,20 @@ h2 {
   background-color: deepskyblue;
 }
 
+.container {
+  text-align: center;
+  margin: 40px 0px;
+}
+
+.btn {
+  background: deepskyblue;
+  border: 0;
+  padding: 10px 30px;
+  border-radius: 3px;
+  font-size: 16px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
 @media only screen and (max-width: 425px) {
   h2 {
     text-align: center;
